package com.github.tomap.modeler.model.diagramClass.type;

public class Double extends TypeBase{

	public Double() {
		super("double", 8);
	}

}
