package com.github.tomap.modeler.model.diagramClass.type;

public class Float extends TypeBase{

	public Float() {
		super("float", 4);
	}

}
