package com.github.tomap.modeler.model.diagramClass.visibility;

public class Private extends Visibility{

	public Private() {
		super("-");
	}
}
