package com.github.tomap.modeler.model.diagramClass.visibility;

public class Public extends Visibility{

	public Public() {
		super("+");
	}

}
